--- a/public/css.css
+++ b/public/css.css
@@ -9,6 +9,8 @@ body {
 button:focus {
     outline: 0;
 }
+
+
 /* !Nav! */
 
 nav {
@@ -172,3 +174,24 @@ nav ul li a:hover {
 }
 
 .antispam { display:none;}
+
+/* Splash page */
+#splash button{
+	width: 19.5%; 
+	height: 100%; 
+	margin: 0px; 
+	border: none; 
+}
+#splash button img{
+	width: 100%;
+}
+#splash{
+	text-align: center; 
+	margin: 0; 
+	padding: 0; 
+	width: 100%;
+	height: 1000px; 	
+}
+#index{
+	display: none; 
+}
