--- a/public/css.css
+++ b/public/css.css
@@ -67,28 +67,34 @@ nav ul li a:hover {
 }
 /* !Projects! */
 
+#projects{
+	background: red; 
+	padding: 20px; 
+   overflow: hidden;
+   display: inline; 
+
+}
 #projectInfoContainer{
-	padding-top: 100px; 
+	max-width: 1000px; 
+    overflow: hidden;
+	float: left; 
+	margin-left: 10px; 
+	margin-top: 100px; 
 }
 
 #projectPic {
-    float: left;
     margin: 0px 10px 0px 10px;
-    width: 600px;
-	height: 450px; 
 	position: relative; 
+
 }
 
 #projectPic img{
-	width: 100%; 
 	display:block;
     margin:auto;
-	  position: absolute;
     top: 0;
     left: 0;
     right: 0;
-
-	max-height: 500px; 
+	height: 400px; 
 }
 
 #projectFrontEnd li,
@@ -138,7 +144,10 @@ nav ul li a:hover {
 /* Project Buttons */
 
 #projectSelectBoxes {
-    clear: both;
+	margin-top: 100px; 
+    width: 180px;
+    float: right;
+	margin-right: 10px; 
 }
 .projectSelectImage {
     width: 150px;
@@ -159,6 +168,7 @@ nav ul li a:hover {
 
 #contactInfo{
 	text-align: center; 
+	clear: both; 
 }
 
 #nameContainer{
