--- a/public/css.css
+++ b/public/css.css
@@ -75,11 +75,10 @@ nav ul li a:hover {
 
 }
 #projectInfoContainer{
-	max-width: 1000px; 
-    overflow: hidden;
 	float: left; 
 	margin-left: 10px; 
 	margin-top: 100px; 
+	width: 80%; 
 }
 
 #projectPic {
@@ -94,7 +93,7 @@ nav ul li a:hover {
     top: 0;
     left: 0;
     right: 0;
-	height: 400px; 
+	max-width: 80%; 
 }
 
 #projectFrontEnd li,
@@ -147,7 +146,7 @@ nav ul li a:hover {
 	margin-top: 100px; 
     width: 180px;
     float: right;
-	margin-right: 10px; 
+	margin-right: 10px;
 }
 .projectSelectImage {
     width: 150px;
