--- a/public/css.css
+++ b/public/css.css
@@ -1,7 +1,9 @@
 /* Entire Document */
+ html, body {height: 100%;}
 
 body {
     margin: 0;
+	height: 100%;
     padding: 0;
     font-size: 15px;
     font-family: 'Droid Serif', serif;
@@ -193,7 +195,7 @@ nav ul li a:hover {
 	margin: 0; 
 	padding: 0; 
 	width: 100%;
-	height: 1000px; 	
+	height: 100%; 	
 }
 #index{
 	display: none; 
