--- a/public/css.css
+++ b/public/css.css
@@ -7,6 +7,7 @@ body {
     padding: 0;
     font-size: 15px;
     font-family: 'Droid Serif', serif;
+	z-index: 0; 
 }
 button:focus {
     outline: 0;
@@ -87,6 +88,7 @@ nav ul li a:hover {
     left: 0;
     right: 0;
 	max-width: 80%; 
+	z-index:-1;
 }
 
 #projectFrontEnd li,
