--- a/css.css
+++ b/css.css
@@ -73,6 +73,7 @@ nav ul li a:hover {
 #projectInfoContainer{
 	margin-left: 10px; 
 	width: 100%; 
+	margin-top: 100px; 
 }
 
 #projectPic {
@@ -138,22 +139,20 @@ nav ul li a:hover {
 /* Project Buttons */
 
 #projectSelectBoxes {
-	margin-top: 100px; 
 	width: 100%; 
+	overflow-x:scroll;     
+    white-space: nowrap;
+	margin-top: 30px; 
 }
 .projectSelectImage {
     width: 100%;
     padding: 0;
     margin: 0;
 }
-
-
-/* !!CONTACT!! */
-
-#contactInfo{
-	text-align: center; 
-	clear: both; 
+button{
+	cursor: pointer;
 }
+
 .projectSelectButton {
     background: white;
 	max-width: 150px; 
@@ -162,8 +161,15 @@ nav ul li a:hover {
 	min-height: 100px; 
     width: 18%;
     padding: 0;
-    margin-left: 30px;
     border: none;
+}
+
+
+/* !!CONTACT!! */
+
+#contactInfo{
+	text-align: center; 
+	clear: both; 
 }
 #nameContainer{
 	float: left; 
@@ -235,9 +241,9 @@ nav ul li a {
 #splash button img{
 	width: 150px;
 }
-#projectSelectBoxes {
-	margin-top: 140px; 
-}
+#projectInfoContainer{
+
+	margin-top: 150px; 
 }
 
 @media screen and (max-width: 400px) {
