--- a/css.css
+++ b/css.css
@@ -74,9 +74,11 @@
 	 position: relative;
     text-align: center;
     color: white;
-	background: linear-gradient(
-                     rgba(20,20,20, .5), 
-                     rgba(20,20,20, .5));
+	background-image: 
+    linear-gradient(
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    );
 }
 .projectInfoText{
 	position: absolute;
