--- a/css.css
+++ b/css.css
@@ -71,12 +71,14 @@
  #projects{
 	margin: 0 auto; 
 	width: 95%;
+	position: relative; 
  }
+ /*
 #projectInfoText{
    width: 80%;
    color: white; 
    letter-spacing: -1px;  
-   background: rgb(0, 0, 0); /* fallback color */
+   background: rgb(0, 0, 0); 
    background: rgba(0, 0, 0, 0.7);
    padding: 10px; 
    z-index:99999;
@@ -84,7 +86,20 @@
     top: 35%;
     left: 50%;
     transform: translate(-50%, -50%);
+} */
+#projectInfoText{
+  position: absolute;
+  bottom: 0px;
+  color: white; 
+   letter-spacing: -1px;  
+   background: rgb(0, 0, 0); 
+   background: rgba(0, 0, 0, 0.7);
+   padding: 10px;
 }
+#projects #projectPicture{
+	
+}
+
  #projects ul{
 	 padding: 0px; 
  }
@@ -137,7 +152,7 @@
 }
 
  #projectPicture {
-     position: relative;
+     display: block; 
 	 opacity: 0.6;
 	 width: 100%;
     height: auto;
@@ -260,7 +275,7 @@
 	}
 	
  }
- @media screen and (max-width: 850px) {
+ @media screen and (max-width: 800px) {
 	.projectSelectButton {
      max-width: 100px;
      max-height: 100px;
@@ -274,10 +289,8 @@
 
 	#projectInfoText{
 	   position: relative;  
-	   top: 0px; 
-	   width: 90%; 
-	   left: 0px; 
-	   transform: none; 
+	   width: 95%; 
+	   margin-bottom: 10px; 
 	}
 	#projectPicture{
         display: none;
