--- a/css.css
+++ b/css.css
@@ -68,22 +68,27 @@
 /* !Projects! */
  #projects{
 	margin: 0 auto; 
-	width: 95%;
+	width: 100%;
 	position: relative; 
 	margin-top: 100px; 
+	height: auto; 
+
  }
 
 #projectInfoText{
   position: absolute;
   bottom: 0px;
   color: white; 
-   letter-spacing: -1px;  
    background: rgb(0, 0, 0); 
    background: rgba(0, 0, 0, 0.7);
    padding: 10px;
-   width: 98.5%;
+   width: 100%;
+	height: 100%;
 }
 
+#projectTitle{
+	padding-top: 10%; 
+}
  #projects ul{
 	 padding: 0px; 
  }
@@ -139,7 +144,7 @@
      display: block; 
 	 opacity: 0.6;
 	 width: 100%;
-    height: auto;
+	height: auto;
 }
 
 
@@ -227,6 +232,9 @@
 	 
 	
 	/* Projects */
+	#projectTitle{
+		padding-top: 5%;
+	}
 	#projectLinks{
 		margin: 0px; 
 	}
@@ -266,6 +274,9 @@
      max-height: 100px;
      min-width: 50px;
      min-height: 50px;
+	}
+	#projectTitle{
+		padding: 0px; 
 	}
 	 #projectLinks li {
 		width: 90%; 
