--- a/css.css
+++ b/css.css
@@ -300,4 +300,18 @@
 		padding-top: 4px; 
 	}
  }
-    
+ @media screen and (max-width: 600px) {
+		.projectSelectButton{
+			width: 100%;
+			max-width: 100%;
+			height: 100px;
+			white-space: normal;
+		}
+		#projectSelectBoxes{
+			overflow-x: visible;
+			white-space: normal; 
+		}
+		.projectSelectImage{
+			width: 100px;
+		}
+ }
