--- a/css.css
+++ b/css.css
@@ -70,20 +70,19 @@
 	margin: 0 auto; 
 	width: 100%;
 	position: relative; 
-	margin-top: 100px; 
+	margin-top: 70px; 
 	height: auto; 
 
  }
 
 #projectInfoText{
-  position: absolute;
-  bottom: 0px;
-  color: white; 
+   position: absolute;
+   bottom: 0px;
+   color: white; 
    background: rgb(0, 0, 0); 
    background: rgba(0, 0, 0, 0.7);
-   padding: 10px;
    width: 100%;
-	height: 100%;
+   height: 100%;
 }
 
 #projectTitle{
@@ -173,7 +172,10 @@
      border: none;
 }
 
-
+#test{
+	max-width: 700px;
+	margin: 0 auto;
+}
 
 
 /* !!CONTACT!! */
@@ -229,8 +231,7 @@
          width: 150px;
     }
 	 
-	 
-	
+
 	/* Projects */
 	#projectTitle{
 		padding-top: 5%;
@@ -275,6 +276,10 @@
      min-width: 50px;
      min-height: 50px;
 	}
+		 
+	#projects{
+		padding-top: 32px;
+	}
 	#projectTitle{
 		padding: 0px; 
 	}
@@ -284,8 +289,7 @@
 	 }
 
 	#projectInfoText{
-	   position: relative;  
-	   width: 95%; 
+	   position: relative;   
 	   margin-bottom: 10px; 
 	}
 	#projectPicture{
