--- a/css.css
+++ b/css.css
@@ -21,7 +21,7 @@
      color: white;
      border-bottom-color: yellow;
      border-bottom-style: solid;
-
+	 height: 70px;
      width: 100%;
      top: 0;
      z-index: 99;
@@ -70,9 +70,8 @@
 	margin: 0 auto; 
 	width: 100%;
 	position: relative; 
-	margin-top: 70px; 
+	margin-top: 60px; 
 	height: auto; 
-
  }
 
 #projectInfoText{
@@ -85,8 +84,13 @@
    height: 100%;
 }
 
+#content{
+	max-width: 700px;
+	margin: 0 auto;
+	padding-bottom: 30px;
+}
 #projectTitle{
-	padding-top: 10%; 
+	padding-top: 4%; 
 }
  #projects ul{
 	 padding: 0px; 
@@ -172,10 +176,7 @@
      border: none;
 }
 
-#content{
-	max-width: 700px;
-	margin: 0 auto;
-}
+
 
 
 /* !!CONTACT!! */
@@ -234,7 +235,7 @@
 
 	/* Projects */
 	#projectTitle{
-		padding-top: 5%;
+		padding-top: 1.5%;
 	}
 	#projectLinks{
 		margin: 0px; 
@@ -251,7 +252,7 @@
 	}
 	
  }
- @media screen and (max-width: 800px) {
+ @media screen and (max-width: 820px) {
 	 /* NAV */
      nav ul{
          display: block;
@@ -275,10 +276,6 @@
      max-height: 100px;
      min-width: 50px;
      min-height: 50px;
-	}
-		 
-	#projects{
-		padding-top: 32px;
 	}
 	#projectTitle{
 		padding: 0px; 
