--- a/css.css
+++ b/css.css
@@ -65,6 +65,46 @@
 }
 
 
+
+/* About me Section */
+#aboutMeButton{
+	 color: white; 
+     cursor:pointer;
+	 background:none!important;
+     border:none; 
+     padding:0!important;
+	 font-size: 12px;
+}
+
+#aboutMeButton:hover{
+ text-decoration:underline;
+}
+
+#aboutMeOverlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.9);
+    z-index: 2;
+    cursor: pointer;
+}
+
+#aboutMeText{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 20px;
+    color: white;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+}
+
+
 /* !Projects! */
  #projects{
 	margin: 0 auto; 
@@ -199,10 +239,12 @@
  #credit{
      font-size: 10px;
 }
+
+
 /* Splash page */
  #splash button{
      width: 19.5%;
-     height: 100%;
+	 height: 100%;
      margin: 0px;
      border: none;
 }
@@ -214,7 +256,7 @@
      margin: 0;
      padding: 0;
      width: 100%;
-     height: 100%;
+	 max-height: 100%;
 }
  #index{
      display: none;
@@ -231,6 +273,10 @@
      #splash button img{
          width: 150px;
     }
+	
+	#aboutMeText{
+		font-size: 18px;
+	}
 	 
 
 	/* Projects */
@@ -305,6 +351,10 @@
 	}
  }
  @media screen and (max-width: 600px) {
+		#aboutMeText{
+			font-size: 16px;
+		}
+	 
 		.projectSelectButton{
 			width: 100%;
 			max-width: 100%;
