--- a/css.css
+++ b/css.css
@@ -256,7 +256,7 @@
      margin: 0;
      padding: 0;
      width: 100%;
-	 max-height: 100%;
+	 height: 100%;
 }
  #index{
      display: none;
@@ -299,6 +299,9 @@
 	
  }
  @media screen and (max-width: 820px) {
+	 #aboutMeText{
+		font-size: 16px;
+	}
 	 /* NAV */
 	 nav{
 		 height: 100px; 
@@ -352,7 +355,7 @@
  }
  @media screen and (max-width: 600px) {
 		#aboutMeText{
-			font-size: 16px;
+			font-size: 14px;
 		}
 	 
 		.projectSelectButton{
