--- a/css.css
+++ b/css.css
@@ -25,6 +25,7 @@
      width: 100%;
      top: 0;
      z-index: 99;
+	 position: fixed;
 }
 /* Leftside of Nav */
  #nic {
@@ -247,6 +248,7 @@
 	 height: 100%;
      margin: 0px;
      border: none;
+	 padding: 0px;
 }
  #splash button img{
      width: 100%;
