--- a/css.css
+++ b/css.css
@@ -75,7 +75,7 @@
 	 background:none!important;
      border:none; 
      padding:0!important;
-	 font-size: 12px;
+	 font-size: 10px;
 }
 
 #aboutMeButton:hover{
@@ -233,7 +233,13 @@
  #contactInfo{
      text-align: center;
      clear: both;
+	 padding-top: 50px;
+	 font-size: 25px;
+	 height: 300px;
+	 background-color: #3B3738;
+	 color: white; 
 }
+
  #nameContainer{
      float: left;
 }
